fix owner-avatar-wrap overflow

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1217,6 +1217,7 @@
         border-bottom: 1px solid #DCDCDC;
         .info-wrap {
             .owner-avatar-wrap {
+	        overflow:hidden;
                 display: inline;
                 float: left;
                 width: 50px;
